fix: correct layout issues in hero section

--- a/styles.css
+++ b/styles.css
@@ -112,14 +112,15 @@ body {
 #hero-container {
     position: relative;
     display: flex;
+    flex-shrink: 0;
     vertical-align: middle;
     justify-content: center;
+    width: fit-content;
     height: auto;
 
     & img#hero {
         background-image: url(images/lo-res_hero.jpg);
         display: block;
-        max-width: 100%;
         max-height: 100vh;
     }
 
@@ -134,13 +135,13 @@ body {
         width: 100%;
         background: rgb(0, 0, 0);
         background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 0) 100%);
-        color: white;
         text-align: center;
         padding: 20px 0;
 
         & img#logo {
             width: 30%;
         }
+
         & #company {
             font-family: 'Abhaya Libre', serif;
             font-size: 5em;
@@ -152,6 +153,14 @@ body {
 }
 
 #main-container {
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
+
+#form-container {
+    background-color: #DDA15E;
+    min-height: 100px;
+    width: 100%;
+}
+
